'tried changes at index.html

--- a/web/index.html
+++ b/web/index.html
@@ -26,8 +26,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>testing_app</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Wildtierarten</title>
+  <link rel="manifest" href="assets/json/manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
