added info.txt asset, deleted unnecessary asstes

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="Jagdschule" content="Wildtiere und Jagdhunde in Deutschland">
+  <meta name="Jagdschule" content="Wildtiere & Jagdhunde in Deutschland">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,10 +24,10 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="icons/favicon.png"/>
 
   <title>Wildtierarten</title>
-  <link rel="manifest" href="assets/json/manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
